--- a/time_series_plots.Rmd
+++ b/time_series_plots.Rmd
@@ -10,9 +10,9 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 
-# This loads in the plots, which were generated in the file named 'pt2_...'
+# This loads in the plots, which were generated in the file named 'pt2_longTermIntrannual_timeSeries.Rmd'
 load("all_plots_list.RData")
-
+library(cowplot) # For organizing plots into columns
 ```
 
 ```{r, echo=FALSE, results='asis', fig.width=6.5, fig.height=7}
@@ -30,7 +30,7 @@ for (station in stations_of_interest_10yrs) {
   # Print the station header as an RMarkdown header (### is level 3)
   cat("### Station: ", station, "\n\n")
   
-  # Use cowplot::plot_grid to combine plots and avoid $variable issue
+  # Use cowplot::plot_grid to combine plots and avoid appearance of "$variable" on axis
   combined_plot <- plot_grid(plotlist = all_plots_list[[station]], ncol = 2)
   print(combined_plot)
   
